starting html design

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="container jumbotron text-center title" >
           <div class="col-md-12 text-center">
-          <h1> <span class="glow" >Victorian Crime Data Dashboard </span></h1>
+          <h1> <span class="glow" >Victorian Crime</span><span class="glow2"> Data Dashboard </span></h1>
           </div>
         </div>
         </div>
