--- a/index.html
+++ b/index.html
@@ -42,18 +42,46 @@
             </div>
           </nav> <!-- End of Navbar -->
 
-          <!-- Start of summary section. This is the right hand side of the grid.-->
+          <!-- Start of dashboard section. This is the right hand side of the grid.-->
           <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
+                    <p></p>
+                    <p></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6" id="news-scraping">
+                    <p> News scraping headline here</p>
+                </div>
+                <div class="col-lg-6" id="user-selection">
+                    <p> user selection options here</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6" id="news-scraping">
+                    <p> bar graph 1 here </p>
+                </div>
+                <div class="col-lg-6" id="user-selection">
+                    <p> another  graph here</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12" id="heatmap">
+                    <p> heatmap goes here</p>
+                </div>
+            </div>
+
         </div>
 
+        <div class="bg-primary" id="footer">
+            <p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p>
+          </div>
         <!-- This script is required to get the drop down options to work.--> 
         <!-- <script src="static/js/app.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </body>
+</html>
 
     
